# Adversa-core

./: .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  README.md  adversa-prd-issues.md  prd.md  pyproject.toml
adversa/: __init__.py  __main__.py  cli.py  constants.py
adversa/agent_runtime/: __init__.py  browser.py  context.py  executor.py  middleware.py  runtime.py
adversa/artifacts/: __init__.py  manifest.py  store.py
adversa/config/: load.py  models.py
adversa/intake/: __init__.py  controller.py  plan.py  questions.py  scope.py
adversa/llm/: errors.py  providers.py
adversa/logging/: __init__.py  audit.py  (+1 more)
assets/: adversa_cli_banner.txt
docs/: adversa-toml.md  interactive-shell.md  mise-setup.md  netdisc-runtime.md  prerecon-runtime.md  recon-runtime.md  scope-template-json.md
tests/: test_agent_runtime_executor.py  test_agent_runtime_middleware.py  test_artifact_store.py  test_cli_help.py  test_cli_intake_chat.py  test_config.py  test_intake_controller.py  test_intake_scope.py  test_latest_run_resolution.py  test_llm_errors.py  test_logging_redaction.py  test_markdown_parsing.py  test_netdisc.py  test_netdisc_bash_tool.py  test_netdisc_markdown.py  test_pause_resume.py  test_phase_outputs.py  test_phase_schemas.py  test_plan.py  test_prerecon.py  test_prerecon_markdown.py  test_recon_markdown.py  test_resume_artifacts.py  test_rules_engine.py  test_scope_ack.py  test_shell_intake_chat.py  test_shell_slash_commands.py  test_temporal_retries.py  test_temporal_workflow.py  test_vuln.py  test_waiting_for_config.py  test_waiting_transition_integration.py
(+45 files in other folders)
