[project]
name = "adversa-core"
version = "0.1.0"
description = "Adversa safe-by-default whitebox security CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4.3",
    "langchain[anthropic,openai]>=1.2.10",
    "langgraph>=1.0.9",
    "pydantic>=2.12.5",
    "temporalio>=1.23.0",
    "typer>=0.12.3",
]

[project.scripts]
adversa = "adversa.cli:app"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
